--- a/src/components/RewardCard/RewardCardContent.css
+++ b/src/components/RewardCard/RewardCardContent.css
@@ -1,6 +1,7 @@
 @import '../../style/variable.css';
 
 .contentContainer {
+  margin: 0 0 var(--marginXSmall);
   text-align: center;
 }
 
